--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "next": "latest",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
