--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "next": "latest",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
-    "pusher": "^5.1.3",
-    "pusher-js": "^8.3.0",
     "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
@@ -52,6 +50,8 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-textarea-autosize": "^8.5.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2",
