--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-textarea-autosize": "^8.5.3",
+    "sharp": "^0.32.6",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
